tests/Types/fail/missing-param.ts
import { route } from "@ninots/routing";

route("users.show");
